apps/production/client-sites/daniela-rivas/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daniela-rivas
  namespace: lulo-demo-landings
  labels:
    app: daniela-rivas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daniela-rivas
  template:
    metadata:
      labels:
        app: daniela-rivas
        name: daniela-rivas
    spec:
      containers:
      - name: daniela-rivas
        image: "registry.yesidlopez.de/daniela-rivas:v1.0.13" # {"$imagepolicy": "lulo-demo-landings:daniela-rivas"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
      - name: registry-secret
